--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 <div class="banner">🔥 PROMOÇÃO RELÂMPAGO ATÉ ÀS 23:59 🔥</div>
 
 <section class="produtos" id="listaProdutos">
-<h3>kit panela</h3>
+<h3>kit panela teste</h3>
   <div class="produto" data-produto="kit panela de Teflon" data-preco="190" data-categoria="cozinha" data-variacao="tamanho">
     <img src="https://i.imgur.com/nmRamsO.jpeg" alt="kit panela de Teflon">
     <h3>kit panela de Teflon</h3>
